chapter07/gateway/grpc/manifests/grpc-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: grpc-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: grpc-gw
    allowedRoutes:
      namespaces:
        from: Same
